# mass_spectrometry

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  COMSOL_MATLAB_API手册.md  COMSOL_自动化建模经验总结.md  COMSOL_自动化建模经验总结_旧版存档.md  COMSOL_调试方法论.md  README.md  README_文档使用指南.md  phase2_electrostatics.m  phase2_electrostatics_coil_transverse.m  phase3_particle_tracing.m  phase4_thermal_emission_coil_transverse.m  pyproject.toml  requirements-lock.txt  test_esa.m  test_icr_cell.m  test_magnetic_coil.m  test_magnetic_sector.m  test_multipole_es.m  test_multipole_stability.m  test_quadrupole_stability.m  项目_电子枪.md
.githooks/: pre-commit
common/: common_artifact_paths.m  export_oatof_cad_step.m  import_step_to_solidworks.m  import_step_to_solidworks.py  ms_stage1_ei_source.m  oatof_cad_export_manifest.m  require_powershell7.ps1  run_comsol_r2025b.ps1  test_collision_cell.m  test_collision_cell_gpu_comparison.m  test_cpt_magnetic_force.m  test_einzel_cpt.m  test_einzel_lens.m  test_esa.m  test_icr_cell.m  test_lit_cpt.m  test_lit_geometry_es.m  test_magnetic_sector.m  test_multipole_es.m  test_multipole_geometry.m  test_multipole_stability.m  test_quadrupole_stability.m  test_resonant_charge_exchange.m  test_space_charge.m  test_square_shield_accel.m  test_wien_filter.m  verify_development_standards.py  verify_documentation.ps1  verify_lightweight.ps1  verify_repository_hygiene.ps1  verify_toolchain.ps1  workspace_paths.m
config/: project_registry.json
docs/: COMSOL_API.md  COMSOL_DEBUGGING.md  DEVELOPMENT_STANDARDS.md  PLOTTING_STANDARDS.md  ROADMAP.md  SIMION_REFERENCE.md  (+2 more)
(+881 files in other folders)
