[project]
name = "mass-spectrometry-analysis"
version = "0.1.0"
description = "Solver-independent analysis tools for the mass spectrometry projects"
requires-python = ">=3.11,<3.12"
dependencies = [
  "jsonschema>=4.26,<5",
  "numpy>=2,<3",
  "scipy>=1.14,<2",
  "pandas>=2.2,<4",
  "matplotlib>=3.9,<4",
  "openpyxl>=3.1,<4",
]

[project.optional-dependencies]
cad = ["pywin32>=306; platform_system == 'Windows'"]
dev = ["ruff==0.15.22"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E9", "F"]

[tool.pytest.ini_options]
testpaths = ["projects"]
python_files = ["test_*.py"]
